// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flyout conflicts should allow conflict resolution 1`] = `
<EuiFlyout
  closeButtonAriaLabel="Closes this dialog"
  hideCloseButton={false}
  maxWidth={false}
  onClose={[MockFunction]}
  ownFocus={false}
  size="s"
>
  <EuiFlyoutHeader
    hasBorder={true}
  >
    <EuiTitle
      size="m"
    >
      <h2>
        <FormattedMessage
          defaultMessage="Import saved objects"
          id="kbn.management.objects.objectsTable.flyout.importSavedObjectTitle"
          values={Object {}}
        />
      </h2>
    </EuiTitle>
  </EuiFlyoutHeader>
  <EuiFlyoutBody>
    <span>
      <EuiSpacer
        size="s"
      />
      <EuiCallOut
        color="warning"
        data-test-subj="importSavedObjectsConflictsWarning"
        iconType="help"
        title={
          <FormattedMessage
            defaultMessage="Index Pattern Conflicts"
            id="kbn.management.objects.objectsTable.flyout.indexPatternConflictsTitle"
            values={Object {}}
          />
        }
      >
        <p>
          <FormattedMessage
            defaultMessage="The following saved objects use index patterns that do not exist. Please select the index patterns you'd like re-associated with them. You can {indexPatternLink} if necessary."
            id="kbn.management.objects.objectsTable.flyout.indexPatternConflictsDescription"
            values={
              Object {
                "indexPatternLink": <ForwardRef
                  href=""
                >
                  <FormattedMessage
                    defaultMessage="create a new index pattern"
                    id="kbn.management.objects.objectsTable.flyout.indexPatternConflictsCalloutLinkText"
                    values={Object {}}
                  />
                </ForwardRef>,
              }
            }
          />
        </p>
      </EuiCallOut>
    </span>
    <EuiInMemoryTable
      columns={
        Array [
          Object {
            "description": "ID of the index pattern",
            "field": "existingIndexPatternId",
            "name": "ID",
            "sortable": true,
          },
          Object {
            "description": "How many affected objects",
            "field": "list",
            "name": "Count",
            "render": [Function],
          },
          Object {
            "description": "Sample of affected objects",
            "field": "list",
            "name": "Sample of affected objects",
            "render": [Function],
          },
          Object {
            "field": "existingIndexPatternId",
            "name": "New index pattern",
            "render": [Function],
          },
        ]
      }
      items={
        Array [
          Object {
            "existingIndexPatternId": "MyIndexPattern*",
            "list": Array [
              Object {
                "id": "1",
                "title": "My Visualization",
                "type": "visualization",
              },
            ],
            "newIndexPatternId": undefined,
          },
        ]
      }
      pagination={
        Object {
          "pageSizeOptions": Array [
            5,
            10,
            25,
          ],
        }
      }
      responsive={true}
    />
  </EuiFlyoutBody>
  <EuiFlyoutFooter>
    <EuiFlexGroup
      justifyContent="spaceBetween"
    >
      <EuiFlexItem
        grow={false}
      >
        <EuiButtonEmpty
          onClick={[MockFunction]}
          size="s"
        >
          <FormattedMessage
            defaultMessage="Cancel"
            id="kbn.management.objects.objectsTable.flyout.import.cancelButtonLabel"
            values={Object {}}
          />
        </EuiButtonEmpty>
      </EuiFlexItem>
      <EuiFlexItem
        grow={false}
      >
        <EuiButton
          data-test-subj="importSavedObjectsConfirmBtn"
          fill={true}
          isLoading={false}
          onClick={[Function]}
          size="s"
        >
          <FormattedMessage
            defaultMessage="Confirm all changes"
            id="kbn.management.objects.objectsTable.flyout.importSuccessful.confirmAllChangesButtonLabel"
            values={Object {}}
          />
        </EuiButton>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiFlyoutFooter>
</EuiFlyout>
`;

exports[`Flyout conflicts should allow conflict resolution 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "getConflictResolutions": [Function],
        "state": Object {
          "conflictedIndexPatterns": undefined,
          "conflictedSavedObjectsLinkedToSavedSearches": undefined,
          "conflictedSearchDocs": undefined,
          "conflictingRecord": undefined,
          "error": undefined,
          "failedImports": Array [
            Object {
              "error": Object {
                "references": Array [
                  Object {
                    "id": "MyIndexPattern*",
                    "type": "index-pattern",
                  },
                ],
                "type": "missing_references",
              },
              "obj": Object {
                "id": "1",
                "title": "My Visualization",
                "type": "visualization",
              },
            },
          ],
          "file": Object {
            "name": "foo.ndjson",
            "path": "/home/foo.ndjson",
          },
          "importCount": 0,
          "indexPatterns": Array [
            Object {
              "id": "1",
            },
            Object {
              "id": "2",
            },
          ],
          "isLegacyFile": false,
          "isOverwriteAllChecked": true,
          "loadingMessage": undefined,
          "status": "loading",
          "unmatchedReferences": Array [
            Object {
              "existingIndexPatternId": "MyIndexPattern*",
              "list": Array [
                Object {
                  "id": "1",
                  "title": "My Visualization",
                  "type": "visualization",
                },
              ],
              "newIndexPatternId": "2",
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "failedImports": Array [],
        "importCount": 1,
        "status": "success",
      },
    },
  ],
}
`;

exports[`Flyout conflicts should handle errors 1`] = `
<EuiCallOut
  color="warning"
  data-test-subj="importSavedObjectsFailedWarning"
  iconType="help"
  title={
    <FormattedMessage
      defaultMessage="Import failed"
      id="kbn.management.objects.objectsTable.flyout.importFailedTitle"
      values={Object {}}
    />
  }
>
  <p>
    <FormattedMessage
      defaultMessage="Failed to import {failedImportCount} of {totalImportCount} objects. Import failed"
      id="kbn.management.objects.objectsTable.flyout.importFailedDescription"
      values={
        Object {
          "failedImportCount": 1,
          "totalImportCount": 1,
        }
      }
    />
  </p>
  <p />
</EuiCallOut>
`;

exports[`Flyout errors should display unsupported type errors properly 1`] = `
<EuiCallOut
  color="warning"
  data-test-subj="importSavedObjectsFailedWarning"
  iconType="help"
  title={
    <FormattedMessage
      defaultMessage="Import failed"
      id="kbn.management.objects.objectsTable.flyout.importFailedTitle"
      values={Object {}}
    />
  }
>
  <p>
    <FormattedMessage
      defaultMessage="Failed to import {failedImportCount} of {totalImportCount} objects. Import failed"
      id="kbn.management.objects.objectsTable.flyout.importFailedDescription"
      values={
        Object {
          "failedImportCount": 1,
          "totalImportCount": 1,
        }
      }
    />
  </p>
  <p>
    wigwags [id=1] unsupported type
  </p>
</EuiCallOut>
`;

exports[`Flyout legacy conflicts should allow conflict resolution 1`] = `
<EuiFlyout
  closeButtonAriaLabel="Closes this dialog"
  hideCloseButton={false}
  maxWidth={false}
  onClose={[MockFunction]}
  ownFocus={false}
  size="s"
>
  <EuiFlyoutHeader
    hasBorder={true}
  >
    <EuiTitle
      size="m"
    >
      <h2>
        <FormattedMessage
          defaultMessage="Import saved objects"
          id="kbn.management.objects.objectsTable.flyout.importSavedObjectTitle"
          values={Object {}}
        />
      </h2>
    </EuiTitle>
  </EuiFlyoutHeader>
  <EuiFlyoutBody>
    <span>
      <EuiSpacer
        size="s"
      />
      <EuiCallOut
        color="warning"
        data-test-subj="importSavedObjectsLegacyWarning"
        iconType="help"
        title={
          <FormattedMessage
            defaultMessage="Support for JSON files is going away"
            id="kbn.management.objects.objectsTable.flyout.legacyFileUsedTitle"
            values={Object {}}
          />
        }
      >
        <p>
          <FormattedMessage
            defaultMessage="Use our updated export to generate NDJSON files, and you'll be all set."
            id="kbn.management.objects.objectsTable.flyout.legacyFileUsedBody"
            values={Object {}}
          />
        </p>
      </EuiCallOut>
    </span>
    <span>
      <EuiSpacer
        size="s"
      />
      <EuiCallOut
        color="warning"
        data-test-subj="importSavedObjectsConflictsWarning"
        iconType="help"
        title={
          <FormattedMessage
            defaultMessage="Index Pattern Conflicts"
            id="kbn.management.objects.objectsTable.flyout.indexPatternConflictsTitle"
            values={Object {}}
          />
        }
      >
        <p>
          <FormattedMessage
            defaultMessage="The following saved objects use index patterns that do not exist. Please select the index patterns you'd like re-associated with them. You can {indexPatternLink} if necessary."
            id="kbn.management.objects.objectsTable.flyout.indexPatternConflictsDescription"
            values={
              Object {
                "indexPatternLink": <ForwardRef
                  href=""
                >
                  <FormattedMessage
                    defaultMessage="create a new index pattern"
                    id="kbn.management.objects.objectsTable.flyout.indexPatternConflictsCalloutLinkText"
                    values={Object {}}
                  />
                </ForwardRef>,
              }
            }
          />
        </p>
      </EuiCallOut>
    </span>
    <EuiInMemoryTable
      columns={
        Array [
          Object {
            "description": "ID of the index pattern",
            "field": "existingIndexPatternId",
            "name": "ID",
            "sortable": true,
          },
          Object {
            "description": "How many affected objects",
            "field": "list",
            "name": "Count",
            "render": [Function],
          },
          Object {
            "description": "Sample of affected objects",
            "field": "list",
            "name": "Sample of affected objects",
            "render": [Function],
          },
          Object {
            "field": "existingIndexPatternId",
            "name": "New index pattern",
            "render": [Function],
          },
        ]
      }
      items={
        Array [
          Object {
            "existingIndexPatternId": "MyIndexPattern*",
            "list": Array [
              Object {
                "id": "MyIndexPattern*",
                "title": "MyIndexPattern*",
                "type": "index-pattern",
              },
            ],
            "newIndexPatternId": undefined,
          },
          Object {
            "existingIndexPatternId": "filterIndex",
            "list": Array [
              Object {
                "id": "filterIndex",
                "title": "MyIndexPattern*",
                "type": "index-pattern",
              },
            ],
            "newIndexPatternId": undefined,
          },
        ]
      }
      pagination={
        Object {
          "pageSizeOptions": Array [
            5,
            10,
            25,
          ],
        }
      }
      responsive={true}
    />
  </EuiFlyoutBody>
  <EuiFlyoutFooter>
    <EuiFlexGroup
      justifyContent="spaceBetween"
    >
      <EuiFlexItem
        grow={false}
      >
        <EuiButtonEmpty
          onClick={[MockFunction]}
          size="s"
        >
          <FormattedMessage
            defaultMessage="Cancel"
            id="kbn.management.objects.objectsTable.flyout.import.cancelButtonLabel"
            values={Object {}}
          />
        </EuiButtonEmpty>
      </EuiFlexItem>
      <EuiFlexItem
        grow={false}
      >
        <EuiButton
          data-test-subj="importSavedObjectsConfirmBtn"
          fill={true}
          isLoading={false}
          onClick={[Function]}
          size="s"
        >
          <FormattedMessage
            defaultMessage="Confirm all changes"
            id="kbn.management.objects.objectsTable.flyout.importSuccessful.confirmAllChangesButtonLabel"
            values={Object {}}
          />
        </EuiButton>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiFlyoutFooter>
</EuiFlyout>
`;

exports[`Flyout legacy conflicts should handle errors 1`] = `
Array [
  <EuiCallOut
    color="warning"
    data-test-subj="importSavedObjectsLegacyWarning"
    iconType="help"
    title={
      <FormattedMessage
        defaultMessage="Support for JSON files is going away"
        id="kbn.management.objects.objectsTable.flyout.legacyFileUsedTitle"
        values={Object {}}
      />
    }
  >
    <p>
      <FormattedMessage
        defaultMessage="Use our updated export to generate NDJSON files, and you'll be all set."
        id="kbn.management.objects.objectsTable.flyout.legacyFileUsedBody"
        values={Object {}}
      />
    </p>
  </EuiCallOut>,
  <EuiCallOut
    color="warning"
    data-test-subj="importSavedObjectsConflictsWarning"
    iconType="help"
    title={
      <FormattedMessage
        defaultMessage="Index Pattern Conflicts"
        id="kbn.management.objects.objectsTable.flyout.indexPatternConflictsTitle"
        values={Object {}}
      />
    }
  >
    <p>
      <FormattedMessage
        defaultMessage="The following saved objects use index patterns that do not exist. Please select the index patterns you'd like re-associated with them. You can {indexPatternLink} if necessary."
        id="kbn.management.objects.objectsTable.flyout.indexPatternConflictsDescription"
        values={
          Object {
            "indexPatternLink": <ForwardRef
              href=""
            >
              <FormattedMessage
                defaultMessage="create a new index pattern"
                id="kbn.management.objects.objectsTable.flyout.indexPatternConflictsCalloutLinkText"
                values={Object {}}
              />
            </ForwardRef>,
          }
        }
      />
    </p>
  </EuiCallOut>,
  <EuiCallOut
    color="danger"
    title={
      <FormattedMessage
        defaultMessage="Sorry, there was an error"
        id="kbn.management.objects.objectsTable.flyout.errorCalloutTitle"
        values={Object {}}
      />
    }
  >
    <p>
      foobar
    </p>
  </EuiCallOut>,
]
`;

exports[`Flyout should render import step 1`] = `
<EuiFlyout
  closeButtonAriaLabel="Closes this dialog"
  hideCloseButton={false}
  maxWidth={false}
  onClose={[MockFunction]}
  ownFocus={false}
  size="s"
>
  <EuiFlyoutHeader
    hasBorder={true}
  >
    <EuiTitle
      size="m"
    >
      <h2>
        <FormattedMessage
          defaultMessage="Import saved objects"
          id="kbn.management.objects.objectsTable.flyout.importSavedObjectTitle"
          values={Object {}}
        />
      </h2>
    </EuiTitle>
  </EuiFlyoutHeader>
  <EuiFlyoutBody>
    <EuiForm>
      <EuiFormRow
        describedByIds={Array []}
        display="row"
        fullWidth={false}
        hasChildLabel={true}
        hasEmptyLabelSpace={false}
        label={
          <FormattedMessage
            defaultMessage="Please select a file to import"
            id="kbn.management.objects.objectsTable.flyout.selectFileToImportFormRowLabel"
            values={Object {}}
          />
        }
        labelType="label"
      >
        <EuiFilePicker
          compressed={false}
          display="large"
          initialPromptText={
            <FormattedMessage
              defaultMessage="Import"
              id="kbn.management.objects.objectsTable.flyout.importPromptText"
              values={Object {}}
            />
          }
          onChange={[Function]}
        />
      </EuiFormRow>
      <EuiFormRow
        describedByIds={Array []}
        display="row"
        fullWidth={false}
        hasChildLabel={true}
        hasEmptyLabelSpace={false}
        labelType="label"
      >
        <EuiSwitch
          checked={true}
          data-test-subj="importSavedObjectsOverwriteToggle"
          label={
            <FormattedMessage
              defaultMessage="Automatically overwrite all saved objects?"
              id="kbn.management.objects.objectsTable.flyout.overwriteSavedObjectsLabel"
              values={Object {}}
            />
          }
          name="overwriteAll"
          onChange={[Function]}
        />
      </EuiFormRow>
    </EuiForm>
  </EuiFlyoutBody>
  <EuiFlyoutFooter>
    <EuiFlexGroup
      justifyContent="spaceBetween"
    >
      <EuiFlexItem
        grow={false}
      >
        <EuiButtonEmpty
          onClick={[MockFunction]}
          size="s"
        >
          <FormattedMessage
            defaultMessage="Cancel"
            id="kbn.management.objects.objectsTable.flyout.import.cancelButtonLabel"
            values={Object {}}
          />
        </EuiButtonEmpty>
      </EuiFlexItem>
      <EuiFlexItem
        grow={false}
      >
        <EuiButton
          data-test-subj="importSavedObjectsImportBtn"
          fill={true}
          isLoading={false}
          onClick={[Function]}
          size="s"
        >
          <FormattedMessage
            defaultMessage="Import"
            id="kbn.management.objects.objectsTable.flyout.import.confirmButtonLabel"
            values={Object {}}
          />
        </EuiButton>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiFlyoutFooter>
</EuiFlyout>
`;
